force-app/main/default/objects/Implementation_Acceptance__c/Implementation_Acceptance__c.object-meta.xml
<CustomObject>
<label
  >Implementation Acceptance</label><pluralLabel
  >Implementation Acceptances</pluralLabel>
    <nameField><displayFormat>IAC-{00000000}</displayFormat><label
    >Acceptance Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>