force-app/main/default/objects/Implementation_Acceptance__c/fields/Acceptance_Method__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Method__c</fullName>
    <description
  >Unrestricted so a future ImplementationAcceptanceAdapter mode (e-sign
  provider, uploaded signed doc, API confirmation) can be added without a
  picklist migration. Only "Salesforce Hosted" is reachable today
  (SalesforceHostedAcceptanceAdapter) - Sprint 40 Known Adaptation #8.</description>
    <label>Acceptance Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Salesforce Hosted</fullName><default
        >true</default><label>Salesforce Hosted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>