force-app/main/default/objects/Implementation_Acceptance__c/fields/Acceptance_Type__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Type__c</fullName>
    <label>Acceptance Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Milestone Sign-Off</fullName><default
        >true</default><label>Milestone Sign-Off</label></value>
            <value><fullName>User Acceptance Testing</fullName><default
        >false</default><label>User Acceptance Testing</label></value>
            <value><fullName>Go-Live Approval</fullName><default
        >false</default><label>Go-Live Approval</label></value>
            <value><fullName>Final Delivery Sign-Off</fullName><default
        >false</default><label>Final Delivery Sign-Off</label></value>
            <value><fullName>Training Completion</fullName><default
        >false</default><label>Training Completion</label></value>
            <value><fullName>Data Migration Sign-Off</fullName><default
        >false</default><label>Data Migration Sign-Off</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>