force-app/main/default/objects/Implementation_Acceptance__c/fields/Accepted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_Name__c</fullName>
    <label>Accepted By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>