force-app/main/default/objects/Implementation_Acceptance__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <label>Customer Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Acceptances</relationshipLabel>
    <relationshipName>Acceptances</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>