force-app/main/default/objects/Implementation_Acceptance__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>Lookup</type>
    <referenceTo>Implementation_Evidence__c</referenceTo>
    <relationshipLabel>Acceptances</relationshipLabel>
    <relationshipName>Acceptances</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>