force-app/main/default/objects/Implementation_Acceptance__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Acceptances</relationshipLabel>
    <relationshipName>Requested_Acceptances</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>