force-app/main/default/objects/Implementation_Acceptance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label
        >Draft</label></value>
            <value><fullName>Requested</fullName><default>false</default><label
        >Requested</label></value>
            <value><fullName>Pending</fullName><default>false</default><label
        >Pending</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label
        >Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
            <value><fullName>Changes Requested</fullName><default
        >false</default><label>Changes Requested</label></value>
            <value><fullName>Expired</fullName><default>false</default><label
        >Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>